Fixed the navbar collapses.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,12 +5,14 @@ body {
 
 /* Navbar styling */
 .navbar-primary {
+	z-index: 2;
 }
 
 .navbar-secondary {
 	top: 50px;
 	background-color: #444;
 	border-color: #282828;
+	z-index: 1;
 }
 
 .navbar-secondary + .container {
